# glut-demo

./: CMakeLists.txt
src/: demo.cpp  main.cpp
